# my_toy_compiler

./: .gitignore  CMakeLists.txt  Makefile  baselib.cpp  checker.cpp  checker.h  codegen.cpp  codegen.h  common.h  corefn.cpp  cparser.cpp  cparser.h  example.txt  lexer.cpp  lexer.h  main.cpp  node.h  operators.cpp  parser.cpp  parser.h  parser.y  print.lang  stage.h  tokens.l  types.cpp  types.h  value.cpp  value.h
examples/lib/: lib.ppig  libuser.ppig  print.ppig
tests/: CMakeLists.txt  assign_nonmut.ppig  constraints_fail.ppig  constraints_ptr_fail.ppig  divide_by_0.ppig  divide_by_rand.ppig  ptr_bad_constraints.ppig
